log
Thu 23 Mar 2023 03:01:11 PM UTC: 
 tests:  0|6
total_score: 0/70
6395e62
Thu 23 Mar 2023 10:07:39 PM UTC: 
 list.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:32:40: error: ‘list’ undeclared (first use in this function); did you mean ‘List’?
   32 |   List *lista = (List *) malloc(sizeof(list));
      |                                        ^~~~
      |                                        List
list.c:32:40: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
c612580
Thu 23 Mar 2023 10:07:47 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
f59a849
Thu 23 Mar 2023 10:14:35 PM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:40:15: error: invalid initializer
   40 |   Node nodo = (List *) malloc(sizeof(Node));
      |               ^
list.c:41:10: error: incompatible types when assigning to type ‘Node’ from type ‘Node *’
   41 |   nodo = list->head;
      |          ^~~~
list.c:42:19: error: incompatible types when assigning to type ‘Node *’ from type ‘Node’
   42 |   list->current = nodo;
      |                   ^~~~
list.c:43:10: error: incompatible types when returning type ‘Node’ but ‘void *’ was expected
   43 |   return nodo;
      |          ^~~~
list.c:44:1: error: control reaches end of non-void function [-Werror=return-type]
   44 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
3eceb56
Thu 23 Mar 2023 10:15:39 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
894c5ad
Thu 23 Mar 2023 10:17:45 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
6246985
Thu 23 Mar 2023 10:19:45 PM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|0
5562d56
Thu 23 Mar 2023 10:20:18 PM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
df2d99e
Thu 23 Mar 2023 10:22:36 PM UTC: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:43:11: error: expected ‘{’ before ‘*’ token
   43 |     struct* nodo = (struct Node *) malloc(sizeof(Node));
      |           ^
list.c:44:5: error: ‘nodo’ undeclared (first use in this function)
   44 |     nodo = list->head;
      |     ^~~~
list.c:44:5: note: each undeclared identifier is reported only once for each function it appears in
list.c:51:1: error: control reaches end of non-void function [-Werror=return-type]
   51 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
05713e5
Thu 23 Mar 2023 10:22:48 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
24dc677
Thu 23 Mar 2023 10:22:57 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
c43c9b4
Thu 23 Mar 2023 10:30:31 PM UTC: 
 list.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  5|4
total_score: 25/70
bef67b0
Thu 23 Mar 2023 11:17:58 PM UTC: 
 list.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  6|4
total_score: 25/70
83343d3
Thu 23 Mar 2023 11:20:33 PM UTC: 
 list.c | 9 +++++++++
 1 file changed, 9 insertions(+)
In file included from test.c:5:
list.c: In function ‘prevList’:
list.c:83:18: error: ‘List’ {aka ‘struct List’} has no member named ‘curret’; did you mean ‘current’?
   83 |     nodo = list->curret;
      |                  ^~~~~~
      |                  current
Compilation failed
bd3007f
Thu 23 Mar 2023 11:20:40 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
865a938
Thu 23 Mar 2023 11:21:16 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
81ba747
Thu 23 Mar 2023 11:25:19 PM UTC: 
 list.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  6|4
total_score: 25/70
c5e75d8
Thu 23 Mar 2023 11:27:23 PM UTC: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘lastList’:
list.c:69:35: error: expected ‘,’ or ‘;’ before ‘)’ token
   69 |     struct Node* nodo = list->tail);
      |                                   ^
Compilation failed
4e1610b
Thu 23 Mar 2023 11:27:33 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
aeffcbb
Thu 23 Mar 2023 11:31:10 PM UTC: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  6|4
total_score: 25/70
4e7c424
Thu 23 Mar 2023 11:31:46 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
45cf84d
Thu 23 Mar 2023 11:32:32 PM UTC: 
 list.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:57:46: error: expected ‘,’ or ‘;’ before ‘)’ token
   57 |       struct Node* nodo = list->current->next);
      |                                              ^
Compilation failed
d616cbb
Thu 23 Mar 2023 11:32:39 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
047d339
Thu 23 Mar 2023 11:35:27 PM UTC: 
 list.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  9|3
total_score: 35/70
ea993b7
Thu 23 Mar 2023 11:35:51 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘prevList’:
list.c:85:11: error: unused variable ‘data’ [-Werror=unused-variable]
   85 |     void* data = nodo->prev->data;
      |           ^~~~
cc1: all warnings being treated as errors
Compilation failed
04bbcb1
Thu 23 Mar 2023 11:36:03 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
5eef55d
Thu 23 Mar 2023 11:43:14 PM UTC: 
 list.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:96:6: error: ‘lista’ undeclared (first use in this function); did you mean ‘list’?
   96 |   if(lista->head != NULL)
      |      ^~~~~
      |      list
list.c:96:6: note: each undeclared identifier is reported only once for each function it appears in
list.c:98:5: error: ‘nodo’ undeclared (first use in this function); did you mean ‘node’?
   98 |     nodo->next = list->head;
      |     ^~~~
      |     node
Compilation failed
72daafb
